[package]
name = "r2md"
version = "0.4.4"
edition = "2021"
description = "Entire codebase to single markdown or pdf file."
license = "MIT"

[dependencies]
ignore = "0.4.23"
walkdir = "2.5.0"
regex = "1.11.1"
clap = "4.5.26"
printpdf = "0.7.0"
atty = "0.2.14"
serde_yaml = "0.9.34"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }

tempfile = "3.16.0"

glob = "0.3.2"

tokenizers = { version = "0.21.0", features = ["http"] }
anyhow = "1.0.95"
syntect = "5.2.0"
rayon = "1.10.0"

reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"] }
zip = "2.2.2"
petgraph = "0.7.1"

[[bin]]
name = "r2md"
path = "src/main.rs"
